--- a/chat.html
+++ b/chat.html
@@ -10,6 +10,17 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
+
+
+<!-- Manifest PWA -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#121212">
+
+<!-- Ícones principais -->
+<link rel="icon" href="icons/icon-192.png" type="image/png">
+<link rel="apple-touch-icon" href="icons/icon-512.png">
+
+
 <style>
 :root {
   --color-bg-light: #f5f5f5;
@@ -308,85 +319,13 @@ function openPrivate(uid,name){
 function detach(){if(activeListener) activeListener.off();}
 sendBtn.onclick=sendMsg; msgInput.addEventListener('keypress',e=>{if(e.key==='Enter')sendMsg();});
 function sendMsg(){const txt=msgInput.value.trim(); if(!txt||!currentUser)return; db.ref(currentChat).push({uid:currentUser.uid,user:currentUser.displayName,text:txt,timestamp:Date.now()}); msgInput.value='';}
-function renderMessage(key, m) {
-  const div = document.createElement('div');
-  div.className = m.uid === currentUser?.uid ? 'msg userMsg' : 'msg otherMsg';
-  div.innerHTML = `<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
-
-  // 🔹 Botão Traduzir
-  const translateBtn = document.createElement('button');
-  translateBtn.textContent = '🌍 Traduzir';
-  translateBtn.style.border = 'none';
-  translateBtn.style.background = 'transparent';
-  translateBtn.style.color = '#007BFF';
-  translateBtn.style.cursor = 'pointer';
-  translateBtn.style.fontSize = '0.8em';
-  translateBtn.style.marginTop = '4px';
-  translateBtn.onclick = () => translateMessage(m.text, div);
-
-  div.appendChild(translateBtn);
-
-  // 🔹 Botão Deletar (somente para o autor)
-  if (m.uid === currentUser?.uid) {
-    const del = document.createElement('button');
-    del.className = 'deleteBtn';
-    del.textContent = '🗑';
-    del.onclick = () => db.ref(currentChat + '/' + key).remove();
-    div.appendChild(del);
-  }
-
-  chatWindow.appendChild(div);
-  chatWindow.scrollTop = chatWindow.scrollHeight;
+function renderMessage(key,m){
+  const div=document.createElement('div');
+  div.className=m.uid===currentUser?.uid?'msg userMsg':'msg otherMsg';
+  div.innerHTML=`<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
+  if(m.uid===currentUser?.uid){ const del=document.createElement('button'); del.className='deleteBtn'; del.textContent='🗑'; del.onclick=()=>db.ref(currentChat+'/'+key).remove(); div.appendChild(del);}
+  chatWindow.appendChild(div); chatWindow.scrollTop=chatWindow.scrollHeight;
 }
-async function translateMessage(text, parentDiv) {
-  try {
-    // Detecta o idioma do texto
-    const detectRes = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=ru&dt=t&q=${encodeURIComponent(text)}`);
-    const detectData = await detectRes.json();
-    const detectedLang = detectData[2]; // idioma detectado (ex: "ru", "pt")
-
-    // Define o idioma alvo com base no idioma atual da interface
-    let targetLang = 'pt';
-    if (currentLang === 'pt') targetLang = 'pt';
-    else targetLang = 'ru';
-
-    // Se o texto já estiver no mesmo idioma da interface, não traduz
-    if (detectedLang === targetLang) {
-      let existing = parentDiv.querySelector('.translated');
-      if (!existing) {
-        const small = document.createElement('small');
-        small.className = 'translated';
-        small.style.display = 'block';
-        small.style.color = '#777';
-        small.style.marginTop = '4px';
-        small.textContent = '🔸 Mensagem já está neste idioma';
-        parentDiv.appendChild(small);
-      }
-      return;
-    }
-
-    // Faz a tradução apenas se necessário
-    const res = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=${detectedLang}&tl=${targetLang}&dt=t&q=${encodeURIComponent(text)}`);
-    const data = await res.json();
-    const translated = data[0].map(item => item[0]).join('');
-
-    // Evita duplicar traduções
-    let existing = parentDiv.querySelector('.translated');
-    if (!existing) {
-      const small = document.createElement('small');
-      small.className = 'translated';
-      small.style.display = 'block';
-      small.style.color = '#555';
-      small.style.marginTop = '4px';
-      small.textContent = '🔸 ' + translated;
-      parentDiv.appendChild(small);
-    }
-  } catch (err) {
-    console.error('Erro ao traduzir:', err);
-    alert('Falha ao traduzir esta mensagem.');
-  }
-}
-
 
 function watchPrivateMessages(){
   db.ref('private').on('child_added',chat=>{
@@ -415,5 +354,50 @@ function removeNotification(uid){
   if(n) n.remove();
 }
 </script>
+
+<button id="installBtn" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #0078ff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: none;
+  z-index: 9999;
+">📲 Instalar App</button>
+
+<script>
+  let deferredPrompt;
+  const installBtn = document.getElementById('installBtn');
+
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    installBtn.style.display = 'block';
+  });
+
+  installBtn.addEventListener('click', async () => {
+    installBtn.style.display = 'none';
+    deferredPrompt.prompt();
+    const { outcome } = await deferredPrompt.userChoice;
+    if (outcome === 'accepted') console.log('✅ App instalado');
+    deferredPrompt = null;
+  });
+</script>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('✅ Service Worker registrado com sucesso!'))
+      .catch(err => console.error('Falha ao registrar Service Worker:', err));
+  }
+</script>
+
+<link rel="manifest" href="manifest.json">
+
+
 </body>
 </html>
