--- a/chat.html
+++ b/chat.html
@@ -10,24 +10,20 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
+<!-- Manifest PWA -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#121212">
+
+<!-- Ícones principais -->
+<link rel="icon" href="icons/icon-192.png" type="image/png">
+<link rel="apple-touch-icon" href="icons/icon-512.png">
+
 <style>
-:root {
-  --color-bg-light: #f5f5f5;
-  --color-primary: #4CAF50;
-  --color-primary-hover: #45a049;
-}
+:root { --color-bg-light: #f5f5f5; --color-primary: #4CAF50; --color-primary-hover: #45a049; }
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:Arial, sans-serif; background:var(--color-bg-light); transition:background 0.3s, color 0.3s; }
-
-body.dark {
-  background:#121212;
-  color:#eee;
-}
-body.dark header, body.dark footer, body.dark #chatContainer, body.dark #userList, body.dark #adSidebar, body.dark #chatInput {
-  background:#1e1e1e;
-  color:#eee;
-  border-color:#333;
-}
+body.dark { background:#121212; color:#eee; }
+body.dark header, body.dark footer, body.dark #chatContainer, body.dark #userList, body.dark #adSidebar, body.dark #chatInput { background:#1e1e1e; color:#eee; border-color:#333; }
 body.dark #topBar { background:#1a1a1a; border-color:#333; }
 body.dark #chatInput input { background:#333; color:#eee; border:1px solid #555; }
 body.dark #chatInput button { background:#388e3c; }
@@ -35,50 +31,20 @@ body.dark .userMsg { background:#2e7d32; color:white; }
 body.dark .otherMsg { background:#3e3e3e; color:white; }
 
 /* HEADER */
-header {
-  background:#fff;
-  padding:10px;
-  border-bottom:1px solid #ddd;
-  display:flex;
-  align-items:center;
-  gap:8px;
-  position:fixed;
-  top:0; left:0; right:0;
-  z-index:10;
-  justify-content:space-between;
-}
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; display:flex; align-items:center; gap:8px; position:fixed; top:0; left:0; right:0; z-index:10; justify-content:space-between; }
 header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-items:center; gap:6px; }
 .emoji-head { width:28px; }
 
 /* LANGUAGE + THEME BTNS */
 #langThemeBtns { display:flex; gap:8px; align-items:center; }
-#langThemeBtns button {
-  background:white; color:var(--color-primary);
-  border:1px solid var(--color-primary);
-  border-radius:5px; padding:4px 10px; cursor:pointer;
-  font-size:0.9em;
-}
+#langThemeBtns button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); border-radius:5px; padding:4px 10px; cursor:pointer; font-size:0.9em; }
 #langThemeBtns button:hover { background:var(--color-primary); color:white; }
 body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#4CAF50; }
 
 /* TOPBAR */
-#topBar {
-  display:flex;
-  gap:8px;
-  padding:8px;
-  background:#fafafa;
-  border-bottom:1px solid #ddd;
-  margin-top:50px;
-  flex-wrap:wrap;
-  justify-content:space-between;
-  align-items:center;
-}
+#topBar { display:flex; gap:8px; padding:8px; background:#fafafa; border-bottom:1px solid #ddd; margin-top:50px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
 #topBar .left { display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
-#topBar button {
-  background:white; color:var(--color-primary);
-  border:1px solid var(--color-primary);
-  border-radius:5px; padding:6px 10px; cursor:pointer;
-}
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); border-radius:5px; padding:6px 10px; cursor:pointer; }
 #topBar button:hover { background:var(--color-primary); color:white; }
 #topBar span { font-size:0.9em; }
 
@@ -86,10 +52,7 @@ body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#
 #mainContent { display:flex; height:calc(100vh - 130px); }
 
 /* USERLIST */
-#userList {
-  width:200px; background:white; border-right:1px solid #ddd;
-  overflow-y:auto; padding-bottom:10px;
-}
+#userList { width:200px; background:white; border-right:1px solid #ddd; overflow-y:auto; padding-bottom:10px; }
 .userItem { display:flex; align-items:center; gap:6px; padding:6px; cursor:pointer; border-radius:5px; margin:4px; }
 .userItem:hover { background:#e8f8ee; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
@@ -117,11 +80,7 @@ body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#
 #adSidebar { width:250px; background:#f7f7f7; border-left:1px dashed #ccc; text-align:center; padding:8px; }
 
 /* FOOTER */
-footer {
-  background:white; text-align:center; padding:6px;
-  border-top:1px solid #ddd; font-size:0.85em;
-  position:fixed; bottom:0; left:0; right:0; z-index:20;
-}
+footer { background:white; text-align:center; padding:6px; border-top:1px solid #ddd; font-size:0.85em; position:fixed; bottom:0; left:0; right:0; z-index:20; }
 
 /* NOTIF */
 #notificationContainer { position:fixed; top:70px; right:10px; display:flex; flex-direction:column; gap:10px; z-index:200; width:260px; }
@@ -137,11 +96,7 @@ footer {
   .userItem { flex:0 0 auto; margin:0; padding:4px; background:#fff; border-radius:6px; }
   footer { display:none; }
   #chatContainer { height:calc(100vh - 200px); }
-  #chatInput {
-    position:fixed; bottom:0; left:0; right:0;
-    padding:8px; z-index:30;
-    background:rgba(255,255,255,0.98);
-  }
+  #chatInput { position:fixed; bottom:0; left:0; right:0; padding:8px; z-index:30; background:rgba(255,255,255,0.98); }
   #chatWindow { padding-bottom:80px; }
 }
 </style>
@@ -167,7 +122,6 @@ footer {
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
 
-
 <div id="mainContent">
   <div id="userList"></div>
   <div id="chatContainer">
@@ -187,6 +141,20 @@ footer {
 <div id="notificationContainer"></div>
 <audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
 
+<button id="installBtn" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #0078ff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: none;
+  z-index: 9999;
+">📲 Instalar App</button>
+
 <script>
 /* ===== TEMAS ===== */
 const themeBtn=document.getElementById('themeBtn');
@@ -195,34 +163,7 @@ themeBtn.onclick=()=>{document.body.classList.toggle('dark'); themeBtn.textConte
 /* ===== IDIOMA ===== */
 const langBtn=document.getElementById('langBtn');
 let currentLang='ru';
-const texts={
-  ru:{
-    siteName:"Славянский клуб",
-    homeBtn:"🏠 Главная",
-    backBtn:"⬅️ Назад",
-    loginBtn:"Войти через Google",
-    logoutBtn:"Выйти",
-    chatBtn:"💬 Общий чат",
-    usersOnline:"👥 Пользователи онлайн: ",
-    msgPlaceholder:"Введите сообщение...",
-    sendBtn:"Отправить",
-    footer:"© 2025 Славянский клуб — Учите русский и португальский",
-    chatTitle:"💬 Общий чат"
-  },
-  pt:{
-    siteName:"Славянский клуб",
-    homeBtn:"🏠 Início",
-    backBtn:"⬅️ Voltar",
-    loginBtn:"Login com Google",
-    logoutBtn:"Logout",
-    chatBtn:"💬 Bate-papo Geral",
-    usersOnline:"👥 Usuários online: ",
-    msgPlaceholder:"Digite sua mensagem...",
-    sendBtn:"Enviar",
-    footer:"© 2025 Славянский клуб — Aprenda Russo e Português",
-    chatTitle:"💬 Bate-papo Geral"
-  }
-};
+const texts={ru:{siteName:"Славянский клуб",homeBtn:"🏠 Главная",backBtn:"⬅️ Назад",loginBtn:"Войти через Google",logoutBtn:"Выйти",chatBtn:"💬 Общий чат",usersOnline:"👥 Пользователи онлайн: ",msgPlaceholder:"Введите сообщение...",sendBtn:"Отправить",footer:"© 2025 Славянский клуб — Учите русский и португальский",chatTitle:"💬 Общий чат"},pt:{siteName:"Славянский клуб",homeBtn:"🏠 Início",backBtn:"⬅️ Voltar",loginBtn:"Login com Google",logoutBtn:"Logout",chatBtn:"💬 Bate-papo Geral",usersOnline:"👥 Usuários online: ",msgPlaceholder:"Digite sua mensagem...",sendBtn:"Enviar",footer:"© 2025 Славянский клуб — Aprenda Russo e Português",chatTitle:"💬 Bate-papo Geral"}};
 function updateTexts(lang){
   document.querySelector('header h1').childNodes[0].nodeValue = texts[lang].siteName + " ";
   document.getElementById('homeBtn').textContent = texts[lang].homeBtn;
@@ -236,11 +177,7 @@ function updateTexts(lang){
   document.getElementById('footer').textContent = texts[lang].footer;
   document.getElementById('chatTitle').textContent = texts[lang].chatTitle;
 }
-langBtn.onclick = ()=>{
-  if(currentLang==='ru'){currentLang='pt'; langBtn.textContent='🇧🇷 PT'; document.documentElement.lang='pt-BR';}
-  else{currentLang='ru'; langBtn.textContent='🇷🇺 Рус'; document.documentElement.lang='ru';}
-  updateTexts(currentLang);
-};
+langBtn.onclick = ()=>{ if(currentLang==='ru'){currentLang='pt'; langBtn.textContent='🇧🇷 PT'; document.documentElement.lang='pt-BR';}else{currentLang='ru'; langBtn.textContent='🇷🇺 Рус'; document.documentElement.lang='ru';} updateTexts(currentLang);};
 updateTexts(currentLang);
 
 /* ===== FIREBASE E CHAT ===== */
@@ -279,8 +216,7 @@ function renderUsers(){
       for(const uid in all){
         if(uid===currentUser?.uid) continue;
         const u=all[uid]; const onlineNow=!!online[uid]; if(onlineNow) count++;
-        const d=document.createElement('div');
-        d.className='userItem';
+        const d=document.createElement('div'); d.className='userItem';
         d.innerHTML=`<img src="${u.photo}"><span>${onlineNow?'🟢':'⚪'} ${u.name}</span>`;
         d.onclick=()=>openPrivate(uid,u.name);
         userList.appendChild(d);
@@ -290,130 +226,36 @@ function renderUsers(){
   });
 }
 
-function openGlobal(){
-  detach(); currentChat='chatGlobal'; chatTitle.textContent = texts[currentLang].chatTitle; chatWindow.innerHTML='';
-  const ref=db.ref('chatGlobal').limitToLast(200); activeListener=ref;
-  ref.on('child_added',s=>renderMessage(s.key,s.val()));
+function openGlobal(){ detach(); currentChat='chatGlobal'; chatTitle.textContent = texts[currentLang].chatTitle; chatWindow.innerHTML='';
+  const ref=db.ref('chatGlobal').limitToLast(200); activeListener=ref; ref.on('child_added',s=>renderMessage(s.key,s.val()));
 }
-
-function openPrivate(uid,name){
-  detach();
-  const path=['private',[currentUser.uid,uid].sort().join('_')].join('/');
-  currentChat=path; chatTitle.textContent='👤 '+name; chatWindow.innerHTML='';
-  const ref=db.ref(path).limitToLast(200); activeListener=ref;
-  ref.on('child_added',s=>renderMessage(s.key,s.val()));
-  removeNotification(uid);
-}
-
+function openPrivate(uid,name){ detach(); const path=['private',[currentUser.uid,uid].sort().join('_')].join('/'); currentChat=path; chatTitle.textContent='👤 '+name; chatWindow.innerHTML=''; const ref=db.ref(path).limitToLast(200); activeListener=ref; ref.on('child_added',s=>renderMessage(s.key,s.val())); removeNotification(uid);}
 function detach(){if(activeListener) activeListener.off();}
 sendBtn.onclick=sendMsg; msgInput.addEventListener('keypress',e=>{if(e.key==='Enter')sendMsg();});
 function sendMsg(){const txt=msgInput.value.trim(); if(!txt||!currentUser)return; db.ref(currentChat).push({uid:currentUser.uid,user:currentUser.displayName,text:txt,timestamp:Date.now()}); msgInput.value='';}
-function renderMessage(key, m) {
-  const div = document.createElement('div');
-  div.className = m.uid === currentUser?.uid ? 'msg userMsg' : 'msg otherMsg';
-  div.innerHTML = `<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
-
-  // 🔹 Botão Traduzir
-  const translateBtn = document.createElement('button');
-  translateBtn.textContent = '🌍 Traduzir';
-  translateBtn.style.border = 'none';
-  translateBtn.style.background = 'transparent';
-  translateBtn.style.color = '#007BFF';
-  translateBtn.style.cursor = 'pointer';
-  translateBtn.style.fontSize = '0.8em';
-  translateBtn.style.marginTop = '4px';
-  translateBtn.onclick = () => translateMessage(m.text, div);
-
-  div.appendChild(translateBtn);
-
-  // 🔹 Botão Deletar (somente para o autor)
-  if (m.uid === currentUser?.uid) {
-    const del = document.createElement('button');
-    del.className = 'deleteBtn';
-    del.textContent = '🗑';
-    del.onclick = () => db.ref(currentChat + '/' + key).remove();
-    div.appendChild(del);
-  }
-
-  chatWindow.appendChild(div);
-  chatWindow.scrollTop = chatWindow.scrollHeight;
+function renderMessage(key,m){ const div=document.createElement('div'); div.className=m.uid===currentUser?.uid?'msg userMsg':'msg otherMsg'; div.innerHTML=`<strong>${m.user}</strong>: ${m.text}<small>${new Date(m.timestamp).toLocaleTimeString()}</small>`;
+  if(m.uid===currentUser?.uid){ const del=document.createElement('button'); del.className='deleteBtn'; del.textContent='🗑'; del.onclick=()=>db.ref(currentChat+'/'+key).remove(); div.appendChild(del);}
+  chatWindow.appendChild(div); chatWindow.scrollTop=chatWindow.scrollHeight;
 }
-async function translateMessage(text, parentDiv) {
-  try {
-    // Detecta o idioma do texto
-    const detectRes = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=ru&dt=t&q=${encodeURIComponent(text)}`);
-    const detectData = await detectRes.json();
-    const detectedLang = detectData[2]; // idioma detectado (ex: "ru", "pt")
+function watchPrivateMessages(){ db.ref('private').on('child_added',chat=>{ const chatId=chat.key; if(!chatId.includes(currentUser.uid)) return;
+  db.ref('private/'+chatId).limitToLast(1).on('child_added',snap=>{ const m=snap.val(); if(m.uid!==currentUser.uid && currentChat!=='private/'+chatId){ const other=chatId.replace(currentUser.uid,'').replace('_',''); showNotification(m.user,m.text,other); msgSound.currentTime=0; msgSound.play(); } });
+});}
+function showNotification(user,text,uid){ removeNotification(uid); const n=document.createElement('div'); n.className='notification'; n.dataset.uid=uid; n.innerHTML=`<b>${user}</b>: ${text}<button onclick="removeNotification('${uid}')">✖</button>`; notificationContainer.appendChild(n);}
+function removeNotification(uid){ const n=notificationContainer.querySelector(`[data-uid='${uid}']`); if(n) n.remove();}
 
-    // Define o idioma alvo com base no idioma atual da interface
-    let targetLang = 'pt';
-    if (currentLang === 'pt') targetLang = 'pt';
-    else targetLang = 'ru';
+/* ===== PWA INSTALL ===== */
+let deferredPrompt;
+const installBtn = document.getElementById('installBtn');
+window.addEventListener('beforeinstallprompt', (e) => { e.preventDefault(); deferredPrompt = e; installBtn.style.display='block'; });
+installBtn.addEventListener('click', async () => { installBtn.style.display='none'; deferredPrompt.prompt(); const { outcome } = await deferredPrompt.userChoice; if(outcome==='accepted') console.log('✅ App instalado'); deferredPrompt=null; });
 
-    // Se o texto já estiver no mesmo idioma da interface, não traduz
-    if (detectedLang === targetLang) {
-      let existing = parentDiv.querySelector('.translated');
-      if (!existing) {
-        const small = document.createElement('small');
-        small.className = 'translated';
-        small.style.display = 'block';
-        small.style.color = '#777';
-        small.style.marginTop = '4px';
-        small.textContent = '🔸 Mensagem já está neste idioma';
-        parentDiv.appendChild(small);
-      }
-      return;
-    }
-
-    // Faz a tradução apenas se necessário
-    const res = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=${detectedLang}&tl=${targetLang}&dt=t&q=${encodeURIComponent(text)}`);
-    const data = await res.json();
-    const translated = data[0].map(item => item[0]).join('');
-
-    // Evita duplicar traduções
-    let existing = parentDiv.querySelector('.translated');
-    if (!existing) {
-      const small = document.createElement('small');
-      small.className = 'translated';
-      small.style.display = 'block';
-      small.style.color = '#555';
-      small.style.marginTop = '4px';
-      small.textContent = '🔸 ' + translated;
-      parentDiv.appendChild(small);
-    }
-  } catch (err) {
-    console.error('Erro ao traduzir:', err);
-    alert('Falha ao traduzir esta mensagem.');
-  }
-}
-
-
-function watchPrivateMessages(){
-  db.ref('private').on('child_added',chat=>{
-    const chatId=chat.key;
-    if(!chatId.includes(currentUser.uid)) return;
-    db.ref('private/'+chatId).limitToLast(1).on('child_added',snap=>{
-      const m=snap.val();
-      if(m.uid!==currentUser.uid && currentChat!=='private/'+chatId){
-        const other=chatId.replace(currentUser.uid,'').replace('_','');
-        showNotification(m.user,m.text,other); msgSound.currentTime=0; msgSound.play();
-      }
-    });
-  });
-}
-
-function showNotification(user,text,uid){
-  removeNotification(uid);
-  const n=document.createElement('div');
-  n.className='notification';
-  n.dataset.uid=uid;
-  n.innerHTML=`<b>${user}</b>: ${text}<button onclick="removeNotification('${uid}')">✖</button>`;
-  notificationContainer.appendChild(n);
-}
-function removeNotification(uid){
-  const n=notificationContainer.querySelector(`[data-uid='${uid}']`);
-  if(n) n.remove();
+/* ===== SERVICE WORKER ===== */
+if('serviceWorker' in navigator){
+  navigator.serviceWorker.register('service-worker.js')
+    .then(()=>console.log('✅ Service Worker registrado com sucesso!'))
+    .catch(err=>console.error('Falha ao registrar Service Worker:',err));
 }
 </script>
+
 </body>
 </html>
