--- a/chat.html
+++ b/chat.html
@@ -167,6 +167,7 @@ footer {
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
 
+
 <div id="mainContent">
   <div id="userList"></div>
   <div id="chatContainer">
@@ -195,8 +196,32 @@ themeBtn.onclick=()=>{document.body.classList.toggle('dark'); themeBtn.textConte
 const langBtn=document.getElementById('langBtn');
 let currentLang='ru';
 const texts={
-  ru:{ siteName:"Славянский клуб", homeBtn:"🏠 Главная", backBtn:"⬅️ Назад", loginBtn:"Войти через Google", logoutBtn:"Выйти", chatBtn:"💬 Общий чат", usersOnline:"👥 Пользователи онлайн: ", msgPlaceholder:"Введите сообщение...", sendBtn:"Отправить", footer:"© 2025 Славянский клуб — Учите русский и португальский", chatTitle:"💬 Общий чат" },
-  pt:{ siteName:"Славянский клуб", homeBtn:"🏠 Início", backBtn:"⬅️ Voltar", loginBtn:"Login com Google", logoutBtn:"Logout", chatBtn:"💬 Bate-papo Geral", usersOnline:"👥 Usuários online: ", msgPlaceholder:"Digite sua mensagem...", sendBtn:"Enviar", footer:"© 2025 Славянский клуб — Aprenda Russo e Português", chatTitle:"💬 Bate-papo Geral" }
+  ru:{
+    siteName:"Славянский клуб",
+    homeBtn:"🏠 Главная",
+    backBtn:"⬅️ Назад",
+    loginBtn:"Войти через Google",
+    logoutBtn:"Выйти",
+    chatBtn:"💬 Общий чат",
+    usersOnline:"👥 Пользователи онлайн: ",
+    msgPlaceholder:"Введите сообщение...",
+    sendBtn:"Отправить",
+    footer:"© 2025 Славянский клуб — Учите русский и португальский",
+    chatTitle:"💬 Общий чат"
+  },
+  pt:{
+    siteName:"Славянский клуб",
+    homeBtn:"🏠 Início",
+    backBtn:"⬅️ Voltar",
+    loginBtn:"Login com Google",
+    logoutBtn:"Logout",
+    chatBtn:"💬 Bate-papo Geral",
+    usersOnline:"👥 Usuários online: ",
+    msgPlaceholder:"Digite sua mensagem...",
+    sendBtn:"Enviar",
+    footer:"© 2025 Славянский клуб — Aprenda Russo e Português",
+    chatTitle:"💬 Bate-papo Geral"
+  }
 };
 function updateTexts(lang){
   document.querySelector('header h1').childNodes[0].nodeValue = texts[lang].siteName + " ";
@@ -218,7 +243,7 @@ langBtn.onclick = ()=>{
 };
 updateTexts(currentLang);
 
-/* ===== FIREBASE ===== */
+/* ===== FIREBASE E CHAT ===== */
 const firebaseConfig={apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A", authDomain:"dimitry-rusian.firebaseapp.com", databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com", projectId:"dimitry-rusian", storageBucket:"dimitry-rusian.appspot.com", messagingSenderId:"449029666805", appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
 firebase.initializeApp(firebaseConfig);
 const auth=firebase.auth(), db=firebase.database();
@@ -298,6 +323,7 @@ function renderMessage(key, m) {
   translateBtn.style.fontSize = '0.8em';
   translateBtn.style.marginTop = '4px';
   translateBtn.onclick = () => translateMessage(m.text, div);
+
   div.appendChild(translateBtn);
 
   // 🔹 Botão Deletar (somente para o autor)
@@ -312,33 +338,55 @@ function renderMessage(key, m) {
   chatWindow.appendChild(div);
   chatWindow.scrollTop = chatWindow.scrollHeight;
 }
-
 async function translateMessage(text, parentDiv) {
   try {
-    // Define idioma alvo com base na interface
-    const targetLang = currentLang==='pt'?'pt':'ru';
-    // Usa LibreTranslate (CORS friendly)
-    const res = await fetch('https://libretranslate.com/translate', {
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({q:text, source:'auto', target:targetLang, format:'text'})
-    });
+    // Detecta o idioma do texto
+    const detectRes = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=ru&dt=t&q=${encodeURIComponent(text)}`);
+    const detectData = await detectRes.json();
+    const detectedLang = detectData[2]; // idioma detectado (ex: "ru", "pt")
+
+    // Define o idioma alvo com base no idioma atual da interface
+    let targetLang = 'pt';
+    if (currentLang === 'pt') targetLang = 'pt';
+    else targetLang = 'ru';
+
+    // Se o texto já estiver no mesmo idioma da interface, não traduz
+    if (detectedLang === targetLang) {
+      let existing = parentDiv.querySelector('.translated');
+      if (!existing) {
+        const small = document.createElement('small');
+        small.className = 'translated';
+        small.style.display = 'block';
+        small.style.color = '#777';
+        small.style.marginTop = '4px';
+        small.textContent = '🔸 Mensagem já está neste idioma';
+        parentDiv.appendChild(small);
+      }
+      return;
+    }
+
+    // Faz a tradução apenas se necessário
+    const res = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=${detectedLang}&tl=${targetLang}&dt=t&q=${encodeURIComponent(text)}`);
     const data = await res.json();
+    const translated = data[0].map(item => item[0]).join('');
+
+    // Evita duplicar traduções
     let existing = parentDiv.querySelector('.translated');
-    if(!existing){
+    if (!existing) {
       const small = document.createElement('small');
-      small.className='translated';
-      small.style.display='block';
-      small.style.color='#555';
-      small.style.marginTop='4px';
-      small.textContent='🔸 '+data.translatedText;
+      small.className = 'translated';
+      small.style.display = 'block';
+      small.style.color = '#555';
+      small.style.marginTop = '4px';
+      small.textContent = '🔸 ' + translated;
       parentDiv.appendChild(small);
     }
-  } catch(err){
-    console.error('Erro ao traduzir:',err);
+  } catch (err) {
+    console.error('Erro ao traduzir:', err);
     alert('Falha ao traduzir esta mensagem.');
   }
 }
+
 
 function watchPrivateMessages(){
   db.ref('private').on('child_added',chat=>{
