--- a/chat.html
+++ b/chat.html
@@ -338,49 +338,39 @@ function renderMessage(key, m) {
   chatWindow.appendChild(div);
   chatWindow.scrollTop = chatWindow.scrollHeight;
 }
+
 async function translateMessage(text, parentDiv) {
   try {
-    // Detecta o idioma do texto
-    const detectRes = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=ru&dt=t&q=${encodeURIComponent(text)}`);
-    const detectData = await detectRes.json();
-    const detectedLang = detectData[2]; // idioma detectado (ex: "ru", "pt")
+    // Define idioma alvo com base na interface
+    const targetLang = currentLang === 'pt' ? 'pt' : 'ru';
 
-    // Define o idioma alvo com base no idioma atual da interface
-    let targetLang = 'pt';
-    if (currentLang === 'pt') targetLang = 'pt';
-    else targetLang = 'ru';
-
-    // Se o texto já estiver no mesmo idioma da interface, não traduz
-    if (detectedLang === targetLang) {
-      let existing = parentDiv.querySelector('.translated');
-      if (!existing) {
-        const small = document.createElement('small');
-        small.className = 'translated';
-        small.style.display = 'block';
-        small.style.color = '#777';
-        small.style.marginTop = '4px';
-        small.textContent = '🔸 Mensagem já está neste idioma';
-        parentDiv.appendChild(small);
-      }
-      return;
-    }
-
-    // Faz a tradução apenas se necessário
-    const res = await fetch(`https://translate.googleapis.com/translate_a/single?client=gtx&sl=${detectedLang}&tl=${targetLang}&dt=t&q=${encodeURIComponent(text)}`);
-    const data = await res.json();
-    const translated = data[0].map(item => item[0]).join('');
-
-    // Evita duplicar traduções
+    // Evita traduzir se já existir
     let existing = parentDiv.querySelector('.translated');
-    if (!existing) {
-      const small = document.createElement('small');
-      small.className = 'translated';
-      small.style.display = 'block';
-      small.style.color = '#555';
-      small.style.marginTop = '4px';
-      small.textContent = '🔸 ' + translated;
-      parentDiv.appendChild(small);
-    }
+    if (existing) return;
+
+    // Chamada à API do LibreTranslate (CORS-friendly)
+    const res = await fetch('https://libretranslate.de/translate', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        q: text,
+        source: 'auto',
+        target: targetLang,
+        format: 'text'
+      })
+    });
+
+    const data = await res.json();
+    const translated = data.translatedText;
+
+    const small = document.createElement('small');
+    small.className = 'translated';
+    small.style.display = 'block';
+    small.style.color = '#555';
+    small.style.marginTop = '4px';
+    small.textContent = '🔸 ' + translated;
+    parentDiv.appendChild(small);
+
   } catch (err) {
     console.error('Erro ao traduzir:', err);
     alert('Falha ao traduzir esta mensagem.');
