--- a/chat.html
+++ b/chat.html
@@ -14,19 +14,13 @@
 :root {
   --color-bg-light: #f5f5f5;
   --color-primary: #4CAF50;
-  --color-primary-hover: #45a049;
 }
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:Arial, sans-serif; background:var(--color-bg-light); transition:background 0.3s, color 0.3s; }
 
-body.dark {
-  background:#121212;
-  color:#eee;
-}
+body.dark { background:#121212; color:#eee; }
 body.dark header, body.dark footer, body.dark #chatContainer, body.dark #userList, body.dark #adSidebar, body.dark #chatInput {
-  background:#1e1e1e;
-  color:#eee;
-  border-color:#333;
+  background:#1e1e1e; color:#eee; border-color:#333;
 }
 body.dark #topBar { background:#1a1a1a; border-color:#333; }
 body.dark #chatInput input { background:#333; color:#eee; border:1px solid #555; }
@@ -35,50 +29,20 @@ body.dark .userMsg { background:#2e7d32; color:white; }
 body.dark .otherMsg { background:#3e3e3e; color:white; }
 
 /* HEADER */
-header {
-  background:#fff;
-  padding:10px;
-  border-bottom:1px solid #ddd;
-  display:flex;
-  align-items:center;
-  gap:8px;
-  position:fixed;
-  top:0; left:0; right:0;
-  z-index:10;
-  justify-content:space-between;
-}
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; display:flex; align-items:center; gap:8px; position:fixed; top:0; left:0; right:0; z-index:10; justify-content:space-between; }
 header h1 { color:var(--color-primary); font-size:1.3em; display:flex; align-items:center; gap:6px; }
 .emoji-head { width:28px; }
 
 /* LANGUAGE + THEME BTNS */
 #langThemeBtns { display:flex; gap:8px; align-items:center; }
-#langThemeBtns button {
-  background:white; color:var(--color-primary);
-  border:1px solid var(--color-primary);
-  border-radius:5px; padding:4px 10px; cursor:pointer;
-  font-size:0.9em;
-}
+#langThemeBtns button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); border-radius:5px; padding:4px 10px; cursor:pointer; font-size:0.9em; }
 #langThemeBtns button:hover { background:var(--color-primary); color:white; }
 body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#4CAF50; }
 
 /* TOPBAR */
-#topBar {
-  display:flex;
-  gap:8px;
-  padding:8px;
-  background:#fafafa;
-  border-bottom:1px solid #ddd;
-  margin-top:50px;
-  flex-wrap:wrap;
-  justify-content:space-between;
-  align-items:center;
-}
+#topBar { display:flex; gap:8px; padding:8px; background:#fafafa; border-bottom:1px solid #ddd; margin-top:50px; flex-wrap:wrap; justify-content:space-between; align-items:center; }
 #topBar .left { display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
-#topBar button {
-  background:white; color:var(--color-primary);
-  border:1px solid var(--color-primary);
-  border-radius:5px; padding:6px 10px; cursor:pointer;
-}
+#topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); border-radius:5px; padding:6px 10px; cursor:pointer; }
 #topBar button:hover { background:var(--color-primary); color:white; }
 #topBar span { font-size:0.9em; }
 
@@ -86,10 +50,7 @@ body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#
 #mainContent { display:flex; height:calc(100vh - 130px); }
 
 /* USERLIST */
-#userList {
-  width:200px; background:white; border-right:1px solid #ddd;
-  overflow-y:auto; padding-bottom:10px;
-}
+#userList { width:200px; background:white; border-right:1px solid #ddd; overflow-y:auto; padding-bottom:10px; }
 .userItem { display:flex; align-items:center; gap:6px; padding:6px; cursor:pointer; border-radius:5px; margin:4px; }
 .userItem:hover { background:#e8f8ee; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
@@ -117,11 +78,7 @@ body.dark #langThemeBtns button { background:#333; color:#a5d6a7; border-color:#
 #adSidebar { width:250px; background:#f7f7f7; border-left:1px dashed #ccc; text-align:center; padding:8px; }
 
 /* FOOTER */
-footer {
-  background:white; text-align:center; padding:6px;
-  border-top:1px solid #ddd; font-size:0.85em;
-  position:fixed; bottom:0; left:0; right:0; z-index:20;
-}
+footer { background:white; text-align:center; padding:6px; border-top:1px solid #ddd; font-size:0.85em; position:fixed; bottom:0; left:0; right:0; z-index:20; }
 
 /* NOTIF */
 #notificationContainer { position:fixed; top:70px; right:10px; display:flex; flex-direction:column; gap:10px; z-index:200; width:260px; }
@@ -137,11 +94,7 @@ footer {
   .userItem { flex:0 0 auto; margin:0; padding:4px; background:#fff; border-radius:6px; }
   footer { display:none; }
   #chatContainer { height:calc(100vh - 200px); }
-  #chatInput {
-    position:fixed; bottom:0; left:0; right:0;
-    padding:8px; z-index:30;
-    background:rgba(255,255,255,0.98);
-  }
+  #chatInput { position:fixed; bottom:0; left:0; right:0; padding:8px; z-index:30; background:rgba(255,255,255,0.98); }
   #chatWindow { padding-bottom:80px; }
 }
 </style>
@@ -166,7 +119,6 @@ footer {
   </div>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
-
 
 <div id="mainContent">
   <div id="userList"></div>
@@ -195,34 +147,7 @@ themeBtn.onclick=()=>{document.body.classList.toggle('dark'); themeBtn.textConte
 /* ===== IDIOMA ===== */
 const langBtn=document.getElementById('langBtn');
 let currentLang='ru';
-const texts={
-  ru:{
-    siteName:"Славянский клуб",
-    homeBtn:"🏠 Главная",
-    backBtn:"⬅️ Назад",
-    loginBtn:"Войти через Google",
-    logoutBtn:"Выйти",
-    chatBtn:"💬 Общий чат",
-    usersOnline:"👥 Пользователи онлайн: ",
-    msgPlaceholder:"Введите сообщение...",
-    sendBtn:"Отправить",
-    footer:"© 2025 Славянский клуб — Учите русский и португальский",
-    chatTitle:"💬 Общий чат"
-  },
-  pt:{
-    siteName:"Славянский клуб",
-    homeBtn:"🏠 Início",
-    backBtn:"⬅️ Voltar",
-    loginBtn:"Login com Google",
-    logoutBtn:"Logout",
-    chatBtn:"💬 Bate-papo Geral",
-    usersOnline:"👥 Usuários online: ",
-    msgPlaceholder:"Digite sua mensagem...",
-    sendBtn:"Enviar",
-    footer:"© 2025 Славянский клуб — Aprenda Russo e Português",
-    chatTitle:"💬 Bate-papo Geral"
-  }
-};
+const texts={ ru:{ siteName:"Славянский клуб", homeBtn:"🏠 Главная", backBtn:"⬅️ Назад", loginBtn:"Войти через Google", logoutBtn:"Выйти", chatBtn:"💬 Общий чат", usersOnline:"👥 Пользователи онлайн: ", msgPlaceholder:"Введите сообщение...", sendBtn:"Отправить", footer:"© 2025 Славянский клуб — Учите русский и португальский", chatTitle:"💬 Общий чат" }, pt:{ siteName:"Славянский клуб", homeBtn:"🏠 Início", backBtn:"⬅️ Voltar", loginBtn:"Login com Google", logoutBtn:"Logout", chatBtn:"💬 Bate-papo Geral", usersOnline:"👥 Usuários online: ", msgPlaceholder:"Digite sua mensagem...", sendBtn:"Enviar", footer:"© 2025 Славянский клуб — Aprenda Russo e Português", chatTitle:"💬 Bate-papo Geral" } };
 function updateTexts(lang){
   document.querySelector('header h1').childNodes[0].nodeValue = texts[lang].siteName + " ";
   document.getElementById('homeBtn').textContent = texts[lang].homeBtn;
@@ -237,8 +162,9 @@ function updateTexts(lang){
   document.getElementById('chatTitle').textContent = texts[lang].chatTitle;
 }
 langBtn.onclick = ()=>{
-  if(currentLang==='ru'){currentLang='pt'; langBtn.textContent='🇧🇷 PT'; document.documentElement.lang='pt-BR';}
-  else{currentLang='ru'; langBtn.textContent='🇷🇺 Рус'; document.documentElement.lang='ru';}
+  currentLang = currentLang==='ru' ? 'pt' : 'ru';
+  langBtn.textContent = currentLang==='ru' ? '🇷🇺 Рус' : '🇧🇷 PT';
+  document.documentElement.lang = currentLang==='ru' ? 'ru' : 'pt-BR';
   updateTexts(currentLang);
 };
 updateTexts(currentLang);
@@ -308,6 +234,7 @@ function openPrivate(uid,name){
 function detach(){if(activeListener) activeListener.off();}
 sendBtn.onclick=sendMsg; msgInput.addEventListener('keypress',e=>{if(e.key==='Enter')sendMsg();});
 function sendMsg(){const txt=msgInput.value.trim(); if(!txt||!currentUser)return; db.ref(currentChat).push({uid:currentUser.uid,user:currentUser.displayName,text:txt,timestamp:Date.now()}); msgInput.value='';}
+
 function renderMessage(key, m) {
   const div = document.createElement('div');
   div.className = m.uid === currentUser?.uid ? 'msg userMsg' : 'msg otherMsg';
@@ -323,10 +250,9 @@ function renderMessage(key, m) {
   translateBtn.style.fontSize = '0.8em';
   translateBtn.style.marginTop = '4px';
   translateBtn.onclick = () => translateMessage(m.text, div);
-
   div.appendChild(translateBtn);
 
-  // 🔹 Botão Deletar (somente para o autor)
+  // 🔹 Botão Deletar (somente autor)
   if (m.uid === currentUser?.uid) {
     const del = document.createElement('button');
     del.className = 'deleteBtn';
@@ -339,44 +265,29 @@ function renderMessage(key, m) {
   chatWindow.scrollTop = chatWindow.scrollHeight;
 }
 
+// 🔹 Tradução usando LibreTranslate
 async function translateMessage(text, parentDiv) {
   try {
-    // Define idioma alvo com base na interface
     const targetLang = currentLang === 'pt' ? 'pt' : 'ru';
-
-    // Evita traduzir se já existir
-    let existing = parentDiv.querySelector('.translated');
-    if (existing) return;
-
-    // Chamada à API do LibreTranslate (CORS-friendly)
+    if(parentDiv.querySelector('.translated')) return;
     const res = await fetch('https://libretranslate.de/translate', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        q: text,
-        source: 'auto',
-        target: targetLang,
-        format: 'text'
-      })
+      method:'POST', headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({ q:text, source:'auto', target:targetLang, format:'text' })
     });
-
     const data = await res.json();
     const translated = data.translatedText;
-
     const small = document.createElement('small');
-    small.className = 'translated';
-    small.style.display = 'block';
-    small.style.color = '#555';
-    small.style.marginTop = '4px';
-    small.textContent = '🔸 ' + translated;
+    small.className='translated';
+    small.style.display='block';
+    small.style.color='#555';
+    small.style.marginTop='4px';
+    small.textContent='🔸 ' + translated;
     parentDiv.appendChild(small);
-
-  } catch (err) {
+  } catch(err) {
     console.error('Erro ao traduzir:', err);
     alert('Falha ao traduzir esta mensagem.');
   }
 }
-
 
 function watchPrivateMessages(){
   db.ref('private').on('child_added',chat=>{
