--- a/index.html
+++ b/index.html
@@ -432,11 +432,11 @@ aside {
       <h3>📘 Числительные</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboSer">
+    <div class="card lesson-card locked" data-key="verboSerPresente">
       <h3>📘 Глагол "ser" (настоящее время)</h3>
       <p>Complete este módulo.</p>
     </div>
-    <div class="card lesson-card locked" data-key="verboEstar">
+    <div class="card lesson-card locked" data-key="verboEstarPresente">
       <h3>📘 Глагол "estar" (настоящее время)</h3>
       <p>Complete este módulo.</p>
     </div>
@@ -1068,6 +1068,7 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
